<resources>
    <string name="app_name">Capsolver</string>
    <string name="this_is_my_first_application">This Is My First Application.</string>
    <string name="solve_captchas_and_earn_money">SOLVE CAPTCHAS AND EARN MONEY :</string>
    <string name="refresh_5">REFRESH( -5)</string>
    <string name="submit">SUBMIT</string>
    <string name="write_the_above_code_here">Write The Above Code Here.</string>
    <string name="_0_points">0 POINTS</string>
    <string name="eafg67">Eafg67</string>
    <string name="start">START</string>
    <string name="select_level">SELECT LEVEL</string>
    <string name="solve_the_given_captcha_code">Solve The Given Captcha Code :</string>
    <string name="select_level_1">SELECT LEVEL :</string>
    <string name="choose_level" />
    <string name="back"><![CDATA[<-- BACK]]></string>
    <string name="_1_10_points_will_be_added_for_every_correct_answer">1. 10 Points Will Be Added For Every Correct Answer.</string>
    <string name="_2_10_points_will_be_deducted_for_every_wrong_answer">2. 10 Points Will Be Deducted For Every Wrong Answer.</string>
    <string name="_3_5_points_will_be_deducted_for_every_refresh">3. 5 Points Will Be Deducted For Every Refresh.</string>
    <string name="info"><![CDATA[INFO -->]]></string>
    <string name="bacK"><![CDATA[<--------]]></string>
</resources>