<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/startButton"
        android:layout_width="217dp"
        android:layout_height="60dp"
        android:onClick="goToSecondScreen"
        android:text="@string/start"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/levelSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_level_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="282dp"
        android:layout_height="54dp"
        android:addStatesFromChildren="true"
        android:dropDownWidth="wrap_content"
        android:prompt="@string/choose_level"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelSelect"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>